# csvtable

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: PROJECT_BRIEF.md
src/csvtable/: __init__.py  _borders.py  _errors.py  _parse.py  _table.py  _width.py
tests/: test_align.py  test_basic.py  test_borders.py  test_errors.py  test_max_width.py  test_parse.py  test_round_trip.py  test_unicode.py
